修改 blockquote 的颜色为e6603a

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -300,12 +300,13 @@ blockquote {
     box-sizing: border-box;
     margin: 1.75em 0 1.75em -2.2em;
     padding: 0 0 0 1.75em;
-    border-left: #4A4A4A 0.4em solid;
+    border-left: #e6603a 0.4em solid;
 }
 
 blockquote p {
     margin: 0.8em 0;
     font-style: italic;
+    color: #e6603a;
 }
 
 blockquote small {
