--- a/default.hbs
+++ b/default.hbs
@@ -27,7 +27,7 @@
     {{{body}}}
 
     <footer class="site-footer clearfix">
-        <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}&nbsp;&nbsp;All rights reserved.&nbsp;&nbsp;<a href="http://www.hello1010.com/about/" target="_blank">hellojammy</a></section>
+        <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}&nbsp;&nbsp;All rights reserved.&nbsp;&nbsp;<a href="https://github.com/hellojammy/casper-custom" target="_blank">theme</a> by <a href="http://www.hello1010.com/about/" target="_blank">hellojammy</a></section>
         <section class="poweredby"><a href="http://hello1010.com/rewards/" target="_blank">打赏</a></section>
     </footer>
 
