修改底部copyright居中;顶部title新增

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1328,8 +1328,8 @@ body:not(.post-template) .post-title {
 
 .copyright {
     display: block;
-    width: 45%;
-    float: left;
+    width: 100%;
+    text-align: center;
 }
 
 
