--- a/index.hbs
+++ b/index.hbs
@@ -6,14 +6,14 @@
 
         <nav id="nav" class="nav-wrapper" role="navigation">
             <ul class="nav nav--main">
-                <li class="nav__item " style="display:none;">
-                    <a class="header__link subdued" href="http://www.hello1010.com/job-intern">
-                        <span class="complimentary">实习招聘</span>
-                    </a>
-                </li>
                 <li class="nav__item ">
                     <a class="header__link subdued" href="http://www.hello1010.com/about">
                         <span class="complimentary">关于</span>
+                    </a>
+                </li>
+                <li class="nav__item ">
+                    <a class="header__link subdued" href="http://hello1010.com/rewards">
+                        <span class="complimentary">打赏</span>
                     </a>
                 </li>
             </ul>
