--- a/default.hbs
+++ b/default.hbs
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script type="text/javascript">
+        {{! fro TA.QQ.COM speed test}}
+        var _speedMark = new Date();
+    </script>
     {{! Document Settings }}
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -27,8 +31,7 @@
     {{{body}}}
 
     <footer class="site-footer clearfix">
-        <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}&nbsp;&nbsp;All rights reserved.&nbsp;&nbsp;<a href="http://www.hello1010.com/about/" target="_blank">hellojammy</a></section>
-        <section class="poweredby"><a href="http://hello1010.com/rewards/" target="_blank">打赏</a></section>
+        <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}&nbsp;&nbsp;All rights reserved.&nbsp;&nbsp;<a href="https://github.com/hellojammy/casper-custom" target="_blank">theme</a> by <a href="http://www.hello1010.com/about/" target="_blank">hellojammy</a> | <a href="http://hello1010.com/feedback/" target="_blank">反馈</a> | <a href="http://hello1010.com/rewards/" target="_blank">打赏</a></section>
     </footer>
 
     {{! Ghost outputs important scripts and data with this tag }}
@@ -39,5 +42,15 @@
     <script type="text/javascript" src="{{asset "js/headroom.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
     <script type="text/javascript" src="http://tajs.qq.com/stats?sId=40475197" charset="UTF-8"></script>
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-62801953-1', 'auto');
+        ga('send', 'pageview');
+
+    </script>
 </body>
 </html>
