--- a/default.hbs
+++ b/default.hbs
@@ -20,7 +20,7 @@
 
     {{! Styles'n'Scripts }}
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
-    <link rel="stylesheet" type="text/css" href="//fonts.useso.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
+   <!-- <link rel="stylesheet" type="text/css" href="//fonts.useso.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" /> -->
 
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
@@ -41,6 +41,7 @@
     <script type="text/javascript" src="{{asset "js/jquery.fitvids.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/headroom.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
+    {{> "sidetool"}}
     <script type="text/javascript" src="http://tajs.qq.com/stats?sId=40475197" charset="UTF-8"></script>
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
