新增百度统计

--- a/index.hbs
+++ b/index.hbs
@@ -32,3 +32,6 @@
     {{> "loop_owner"}}
 
 </main>
+<script>
+    _hmt.push(['_trackEvent', 'page_view', 'index', 'user view home page']);
+</script>
