--- a/default.hbs
+++ b/default.hbs
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script type="text/javascript">
-        {{! fro TA.QQ.COM speed test}}
-        var _speedMark = new Date();
-    </script>
     {{! Document Settings }}
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
+    <script type="text/javascript">
+        {{! fro TA.QQ.COM speed test}}
+        var _speedMark = new Date();
+        var _hmt = _hmt || [];
+        (function() {
+            var hm = document.createElement("script");
+            hm.src = "//hm.baidu.com/hm.js?f793ef87ef4119b608d0c182a600a964";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
     {{! Page Meta }}
-    <title>{{meta_title}}</title>
+    <title>hellojammy的博客 - {{meta_title}}</title>
     <meta name="description" content="{{meta_description}}" />
-
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
-
     {{! Styles'n'Scripts }}
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
    <!-- <link rel="stylesheet" type="text/css" href="//fonts.useso.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" /> -->
